Fixed hamburger menu overlap

--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,8 @@ label{
   background-color: black;
   font-weight: bold;
   width:30%;
+  position: fixed; 
+  z-index: 1
 }
 #promoImage{
   background-image: url("../images/test.jpeg");
